# expense-analyzer

./: .gitignore  pyproject.toml  requirements.txt
data/: settings.json
reports_test/: summary_2026-01.json
samples/: cleaned_sample_statement.csv  sample_statement.csv
src/expense_analyzer/: analyze.py  categorize.py  cli.py  gui.py  normalize.py  parser.py  reporting.py  settings_store.py  storage.py  validators.py
src/expense_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_alerts.py  test_analyze.py  test_categorize.py  test_normalize.py  test_reporting.py  test_validators.py
